--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/header.css">
 		<link rel="stylesheet" href="css/Normalize.css">
-	</head>
+	<<link rel="stylesheet" href="https://use.typekit.net/gnf4lma.css">/head>
 	
 	<body>
 	<header id="top">
