--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Kensuke Katoriのポートフォリオサイト</title>
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="https://use.typekit.net/gnf4lma.css"><link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/header.css">
 		<link rel="stylesheet" href="css/Normalize.css">
-	<<link rel="stylesheet" href="https://use.typekit.net/gnf4lma.css">/head>
+	</head>
 	
 	<body>
 	<header id="top">
