--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
               </div>
 				<img src="img/%E3%83%91%E3%82%B9%20221.png" alt="">
               <div>
-                <p class="year">2022/05</p><p>先導的研究者体験プログラム(ARE)　区分A採択　研究題目：透過型ミラーデバイスを用いた網膜投影型ARデバイスのウェアラブル化</p>
+                <p class="year">2022/04</p><p>組み込みキャンパスOJTにて「AR MAPS」を開発</p>
               </div>
 				<img src="img/%E3%83%91%E3%82%B9%20221.png" alt="">
               <div>
-                <p class="year">2018/12</p><p>ケンブリッジ英語検定</p>
+                <p class="year">2022/05</p><p>先導的研究者体験プログラム(ARE)　区分A採択　研究題目：透過型ミラーデバイスを用いた網膜投影型ARデバイスのウェアラブル化</p>
               </div>
 				<img src="img/%E3%83%91%E3%82%B9%20221.png" alt="">
             </div>
