--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Kensuke Katoriのポートフォリオサイト</title>
-		<link rel="stylesheet" href="https://use.typekit.net/gnf4lma.css"><link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/header.css">
 		<link rel="stylesheet" href="css/Normalize.css">
 	</head>
@@ -22,7 +22,8 @@
 	      <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-		<nav>
+		
+  	  <nav>
 	    <ul>
 	      <li><a href="#career">Career</a></li>
 	      <li><a href="#profile">Profile</a></li>
@@ -41,7 +42,7 @@
 	      <div class="corner"> <img src="img/mainv/corner.png" alt="" class="line"></div>
 	      <div class="sns"><img src="img/mainv/SNS.png" alt=""></div>
 	      <img src="img/mainv/長方形 27.png" alt="" class="lineone"> <img src="img/mainv/長方形 25.png" alt="" class="linetwo"> <img src="img/mainv/長方形 22.png" alt="" class="linethr"> <img src="img/mainv/長方形 21.png" alt="" class="linefou"> <img src="img/mainv/楕円形 49.png" alt="" class="cirline"> <img src="img/mainv/bigcir.png" alt="" class="bigcir"> <img src="img/mainv/doubcir.png" alt="" class="doubcir"> <img src="img/mainv/Icon feather-triangle.png" alt="" class="trian"> <img src="img/mainv/グループ 44.png" alt="" class="ll"> <img src="img/mainv/グループ 6.png" alt="" class="group"> <img src="img/mainv/リピートグリッド 1.png" alt="" class="repeat"> <img src="img/mainv/多角形 1.png" alt="" class="trione"> <img src="img/mainv/多角形 2.png" alt="" class="tritwo"> <img src="img/mainv/多角形 3.png" alt="" class="trithr"></div>
-	    <div class="hero"> <img src="img/portrait.png" alt="" class="portrait"> <img src="img/title.png" alt="" class="hello"><img src="img/spprofile.png" alt="" class="spportrait"></div>
+	    <div class="hero"> <img src="img/portrait_nhm.png" alt="" class="portrait"> <img src="img/title.png" alt="" class="hello"><img src="img/spportrait_nhm.png" alt="" class="spportrait"></div>
       </section>
 	  <section class="dotsection">
 	    <section class="policy container">
@@ -104,11 +105,11 @@
               </div>
 				<img src="img/%E3%83%91%E3%82%B9%20221.png" alt="">
               <div>
-                <p class="year">2022/04</p><p>組み込みキャンパスOJTにて「AR MAPS」を開発</p>
+                <p class="year">2022/05</p><p>先導的研究者体験プログラム(ARE)　区分A採択　研究題目：透過型ミラーデバイスを用いた網膜投影型ARデバイスのウェアラブル化</p>
               </div>
 				<img src="img/%E3%83%91%E3%82%B9%20221.png" alt="">
               <div>
-                <p class="year">2022/05</p><p>先導的研究者体験プログラム(ARE)　区分A採択　研究題目：透過型ミラーデバイスを用いた網膜投影型ARデバイスのウェアラブル化</p>
+                <p class="year">2018/12</p><p>ケンブリッジ英語検定</p>
               </div>
 				<img src="img/%E3%83%91%E3%82%B9%20221.png" alt="">
             </div>
